@startuml

title __APPLICATIONDAO's Class Diagram__\n

  package  {
    package com.example.applicationsmanagement {
      package com.example.applicationsmanagement.db {
        package com.example.applicationsmanagement.db.ApplicationDao {
          class AppDao {
              - createInsertQuery()
              - createSelectQuery()
              - createSelectUsersByAppId()
              + insertAppsUsers()
              + findById()
              + save()
              + createObjects()
              + findAll()
              + insert()
              + delete()
              + addUserToApp()
              + computeUsers()
              - getAllUsersQuery()
              + delete()
              + update()
              + deleteUserFromApp()
          }
        }
      }
    }
  }
  

  package  {
    package com.example.applicationsmanagement {
      package com.example.applicationsmanagement.db {
        package com.example.applicationsmanagement.db.ApplicationDao {
          interface AppDaoInterface {
              {abstract} + addUserToApp()
              {abstract} + computeUsers()
              {abstract} + deleteUserFromApp()
          }
        }
      }
    }
  }
  

  package  {
    package com.example.applicationsmanagement {
      package com.example.applicationsmanagement.db {
        package com.example.applicationsmanagement.db.ApplicationDao {
          class HbAppDao {
              {static} - factory : SessionFactory
              + HbAppDao()
              + findAll()
              + findById()
              + save()
              + delete()
              + update()
              + addUserToApp()
              + computeUsers()
              + deleteUserFromApp()
          }
        }
      }
    }
  }
  

  AppDao -up-|> AppDaoInterface
  HbAppDao -up-|> AppDaoInterface


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
